<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.github.chirontt.jgit</groupId>
    <artifactId>jgit.http.server.native</artifactId>
    <version>7.2.0</version>
    <packaging>jar</packaging>

    <name>JGitHttpServer</name> <!-- name of the resulting native executable -->
    <description>JGit HTTP server's native executable built by GraalVM</description>

    <properties>
        <maven.compiler.release>17</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <jgit.release.version>7.2.0.202503040940-r</jgit.release.version>
        <jetty.version>12.0.18</jetty.version>
        <slf4j.version>2.0.17</slf4j.version>
        <native.maven.plugin.version>0.10.6</native.maven.plugin.version>
        <!-- main class name for exec:exec plugin task -->
        <exec.mainClass>com.github.chirontt.gitserver.JGitHttpServer</exec.mainClass>
        <!-- default values for server port, path to git repos, and path to LFS storage -->
        <exec.port>8080</exec.port>
        <exec.base-path>/git</exec.base-path>
        <exec.lfs-path>/git-lfs-storage</exec.lfs-path>
        <!-- system properties for the application when run by exec:exec command;
             can be specified on the command line with -Dsys.props="..."
        -->
        <sys.props></sys.props>
        <!-- packages/classes to be initialized at native image build time -->
        <build.time.init>
            com.google.gson,jakarta.servlet,org.eclipse.jetty,org.eclipse.jgit,org.slf4j
        </build.time.init>
        <!-- packages/classes to be initialized at native image run time -->
        <run.time.init>
            org.eclipse.jgit.internal.storage.file.WindowCache,org.eclipse.jgit.lib.internal.WorkQueue,org.eclipse.jgit.lib.RepositoryCache,org.eclipse.jgit.transport.HttpAuthMethod
        </run.time.init>
        <!-- packages/classes to be re-initialized at native image run time -->
        <!-- all org.eclipse.jgit classes are initialized at build time
             (specified above), but due to SecureRandom seeding
             in their static initialization blocks, some JGit classes need be
             re-initialized at native image run time -->
        <run.time.re.init>
            org.eclipse.jgit.util.FileUtils:rerun
        </run.time.re.init>
    </properties>

    <repositories>
        <repository>
            <id>eclipse.releases.repository</id>
            <url>https://repo.eclipse.org/content/groups/releases/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.eclipse.jgit</groupId>
            <artifactId>org.eclipse.jgit.http.server</artifactId>
            <version>${jgit.release.version}</version>
        </dependency>
        <dependency>
            <groupId>org.eclipse.jgit</groupId>
            <artifactId>org.eclipse.jgit.lfs.server</artifactId>
            <version>${jgit.release.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.eclipse.jetty.ee10</groupId>
            <artifactId>jetty-ee10-servlet</artifactId>
            <version>${jetty.version}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.3.0</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <executable>java</executable>
                    <arguments>
                        <!-- GraalVM's agent to generate (or merge with) native-image configuration files -->
                        <!-- argument>-agentlib:native-image-agent=config-merge-dir=src/main/resources/META-INF/native-image</argument -->
                        <argument>${sys.props}</argument>
                        <argument>-classpath</argument>
                        <classpath/>
                        <argument>${exec.mainClass}</argument>
                        <argument>${exec.port}</argument>
                        <argument>${exec.base-path}</argument>
                        <argument>${exec.lfs-path}</argument>
                    </arguments>
                </configuration>
            </plugin>
            <!-- create a stand-alone executable uber jar including all dependencies -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <shadedArtifactAttached>true</shadedArtifactAttached>
                            <shadedClassifierName>no-deps</shadedClassifierName>
                            <filters>
                                <filter>
                                    <!-- exclude files that sign a jar -->
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/*.SF</exclude>
                                        <exclude>META-INF/*.RSA</exclude>
                                        <exclude>META-INF/*.DSA</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                            <transformers>
                                <transformer
                                    implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <manifestEntries>
                                        <Main-Class>${exec.mainClass}</Main-Class>
                                        <Multi-Release>true</Multi-Release>
                                    </manifestEntries>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.graalvm.buildtools</groupId>
                <artifactId>native-maven-plugin</artifactId>
                <version>${native.maven.plugin.version}</version>
                <extensions>true</extensions>
                <executions>
                    <!-- execution>
                        <id>test-native</id>
                        <goals>
                            <goal>test</goal>
                        </goals>
                        <phase>test</phase>
                    </execution -->
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>compile-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <imageName>${project.name}</imageName>
                    <mainClass>${exec.mainClass}</mainClass>
                    <debug>false</debug>
                    <verbose>true</verbose>
                    <fallback>false</fallback>
                    <buildArgs>
                        <buildArg>--enable-url-protocols=http,https</buildArg>
                        <buildArg>--initialize-at-build-time=${build.time.init}</buildArg>
                        <buildArg>--initialize-at-run-time=${run.time.init}</buildArg>
                        <buildArg>-H:ClassInitialization=${run.time.re.init}</buildArg>
                        <buildArg>--native-image-info</buildArg>
                        <buildArg>-march=compatibility</buildArg> <!-- only available in GraalVM for JDK 17+ -->
                        <!-- buildArg>-H:+TraceNativeToolUsage</buildArg -->
                    </buildArgs>
                    <skip>false</skip>
                    <!-- use the uber jar for native image compiling 
                         if long classpath is a problem in Windows
                    -->
                    <!-- classpath>
                        <param>
                            ${project.build.directory}/${project.artifactId}-${project.version}-no-deps.jar
                        </param>
                    </classpath -->
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
